--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "@prisma/client": "^3.13.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "zod": "^3.15.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
