db:apply is easier to remember to db:push

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "db:push": "prisma db push",
+    "db:apply": "prisma db push",
     "db:seed": "prisma db seed",
     "db:migrate": "prisma migrate dev",
     "db:migrate:status": "prisma migrate status",
