--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           yarn
           yarn up
-          docker exec app yarn db:push
+          docker exec app yarn db:apply
           docker exec app yarn db:seed
       - run: yarn lint
       - run: yarn typecheck
