--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "db:apply": "prisma db push",
     "db:seed": "prisma db seed",
+    "db:studio": "prisma studio",
     "db:migrate": "prisma migrate dev",
     "db:migrate:status": "prisma migrate status",
     "db:migrate:deploy": "prisma migrate deploy"
@@ -35,7 +36,6 @@
     "@prisma/client": "^3.13.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
     "zod": "^3.15.1"
   },
   "devDependencies": {
@@ -52,6 +52,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.0.3",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.3.2",
     "prisma": "^3.13.0",
     "source-map-support": "^0.5.20",
