--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.13.0",
+    "i18next": "^21.7.1",
+    "i18next-fs-backend": "^1.1.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "zod": "^3.15.1"
@@ -43,6 +45,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
+    "@types/i18next-fs-backend": "^1.1.2",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
