--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "db:migrate:deploy": "prisma migrate deploy"
   },
   "dependencies": {
+    "@anchan828/nest-i18n-i18next": "^0.3.37",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.13.0",
+    "i18next": "^21.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "zod": "^3.15.1"
