Revert "wip: introduce minio"
This reverts commit eaf877ea044d58ce25261526486698dd58370b35.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
           cache: 'yarn'
       - run: yarn install --immutable
       - run: |
-          echo "DATABASE_URL=mysql://root:password@localhost/develop" > ./.env
+          echo "DATABASE_URL=mysql://root:password@localhost/develop" > ./prisma/.env
       - name: prepare
         run: |
           yarn db:apply
