--- a/.gitignore
+++ b/.gitignore
@@ -34,11 +34,9 @@ lerna-debug.log*
 !.vscode/launch.json
 !.vscode/extensions.json
 
-# Env
-*.env
-
 # Database
 /prisma/data
+/prisma/.env
 
 # Yarn
 .yarn/*
