--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     depends_on:
       - mysql
     env_file:
-      - ./.env
+      - ./prisma/.env
 
   mysql:
     image: mysql
@@ -34,8 +34,9 @@ services:
     ports:
       - 9090:9000
       - 33023:33023
-    env_file:
-      - ./.env
+    environment:
+      - MINIO_ROOT_USER=root
+      - MINIO_ROOT_PASSWORD=password
     entrypoint: sh
     command: -c "
       mkdir -p /data/.minio.sys/buckets;
